Your message about these changes

--- a/backend/ingest-demo.ipynb
+++ b/backend/ingest-demo.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -107,6 +107,17 @@
     "    chunkOverlap: 50,\n",
     "  });\n",
     "const docSplits = await textSplitter.splitDocuments(docs);\n",
+    "\n",
+    "// Add correct metadata to each split\n",
+    "for (const doc of docSplits) {\n",
+    "  doc.metadata = {\n",
+    "    ...doc.metadata,\n",
+    "    originalName: \"test-tsla-10k-2023.pdf\", // or use path.basename(pdfPath)\n",
+    "    source: pdfPath,\n",
+    "    page: doc.metadata.page ?? doc.metadata.loc?.pageNumber ?? 1,\n",
+    "    loc: { pageNumber: doc.metadata.page ?? doc.metadata.loc?.pageNumber ?? 1 }\n",
+    "  };\n",
+    "}\n",
     "\n",
     "const finalDocs = reduceDocs([], docSplits);\n",
     "\n",
